# cpp-tdd

./: .vimrc  CMakeLists.txt  Makefile  build.sh  tests.cpp  whattotest.cpp
src/: CMakeLists.txt  main.cpp  timer.cpp  timer.h  whattotest.cpp
test/: CMakeLists.txt  tests.cpp  timertest.cpp
